
0.9.7f Nov 21, 2003
 * update_pkg_cache now request callback argument to pass to get_mirror_data_from_source

0.9.7e Nov 21, 2003
 * added debugging in transaction functions
 * updated cmp_pkg_versions, changed integer cmp to str cmp for version parts,
   fixing bug with versions containing letters in version parts, such as 0.9.7c.
 * fixed another occurrance of URL malformed, cmp_pkg_versions called with wrong
   pkg struct for dep in --upgrade
 * moved src/action.c:pkg_action_update to src/package.c:update_pkg_cache (libslapt)
 * download_data now gets passed callback function, as arg from download_pkg
   and get_mirror_data_from_source (libslapt)
 * makefile updates for libslapt
   added withlibslapt target to build slapt-get binary linked to libslapt
 * moved usage and version_info functions to action.c (libslapt)

0.9.7d Nov 18, 2003
 * documentation updates
 * added Brazilian Portuguese translation by Arnaldo de Moraes Pereira <arnaldo at sp-dhn dot com dot br>
 * fixed bug when installing package, comparing wrong package structure for version check (thanks Jim)
 * added another unofficial package source
 * Makefile updates (libslapt fix)
 * initialized list->excludes in parse_excludes (libslapt fix)
 * added get_pkg_by_details function
 * added remove_from_transaction function

0.9.7c Nov 13, 2003
 * updated Polish translation
 * added PKG_VER regex definition
 * updated cmp_pkg_versions to ignore arch and compare build if version parts are equal
 * Makefile updates
 * more Makefile updates, symlinking libslapt-$(VERSION).so to libslapt.so

0.9.7b Nov 10, 2003
 * removed --interactive option
 * download all pkgs before processing installs,upgrades, and removals in transaction
 * updated NLS template and en.po
 * updated MD5SUM regex
 * give transaction report prompt for every dist-upgrade (even if no removes or upgrades,
   must have installs, however)
 * updated regex for pkg names, versions, md5, etc